VDLPYL.apk Ma27Ago2024-2a-Catimbo

--- a/index.html
+++ b/index.html
@@ -8,16 +8,34 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-<h2><n>Descarga</n></h2>
+<h3><n>Descargas de aplicaciones móviles</n></h4>
+<br>
+<B><n>VDLPYL</n></B>
+<br><br>
+Aplicación móvil para android, para mirar 
+ <!--{https://VDLPYL.github.io/VDLPYL}-->
+        <a href="https://VDLPYL.github.io/VDLPYL">esta página web</a>.   
+Esta aplicación móvil lleva el nombre de <B><n>VDLPYL</n></B>
+<br>
+<n>{</n>
+<!-- VDLPYL {VDLPYL.apk} -->
+<a href="https://VDLPYL.github.io/VDLPYL-descarga/VDLPYL.apk">Descargar esta aplicación móvil</a>
+<n>}</n>
+<br><br><br><br>
+<B><n>Disponibilidad</n></B>
+<br><br>
 Aplicación móvil para android, para mirar 
  <!--{https://VDLPYL.github.io/fgs/serviciodecarreras/fgs-disponibilidad.html}-->
         <a href="https://VDLPYL.github.io/fgs/serviciodecarreras/fgs-disponibilidad.html">esta página web</a>.   
-Esta aplicación móvil lleva el nombre de
-<!-- VDLPYL-app {Disponibilidad} -->
-<a href="https://VDLPYL.github.io/VDLPYL-descarga/app-debug.apk">Disponibilidad</a>
-<br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br>
-<br><br><br><br><br>
+Esta aplicación móvil lleva el nombre de <B><n>Disponibilidad</n></B>
+<br>
+<n>{</n>
+<!-- VDLPYL-Disponibilidad {app-debug.apk} -->
+<a href="https://VDLPYL.github.io/VDLPYL-descarga/app-debug.apk">Descargar esta aplicación móvil</a>
+<n>}</n>
+<br><br><br>
+{Esta aplicación móvil solo funciona en el teléfono j7}
+<br><br><br>
 <h6>
     <!--Solo tienes que ser Persistente-->
     <!--homepage-->
