fgs-cliente-v1.apk V30Ago2024-2a-Catimbo

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@ Esta aplicación móvil lleva el nombre de <B><n>VDLPYL</n></B>
 <a href="https://VDLPYL.github.io/VDLPYL-descarga/VDLPYL.apk">Descargar esta aplicación móvil</a>
 <n>}</n>
 <br><br><br><br>
+
+
+
 <B><n>Disponibilidad</n></B>
 <br><br>
 Aplicación móvil para android, para mirar 
@@ -33,8 +36,23 @@ Esta aplicación móvil lleva el nombre de <B><n>Disponibilidad</n></B>
 <!-- VDLPYL-Disponibilidad {app-debug.apk} -->
 <a href="https://VDLPYL.github.io/VDLPYL-descarga/app-debug.apk">Descargar esta aplicación móvil</a>
 <n>}</n>
-<br><br><br>
+<br><br>
 {Esta aplicación móvil solo funciona en el teléfono j7}
+<br><br><br><br>
+
+
+
+<B><n>Servicio de Carrera</n></B>
+<br><br>
+Aplicación móvil para android, para dar el  
+    <!--{- Necesito el servicio de una carrera}-->
+<a href="https://VDLPYL.github.io/fgs/serviciodecarreras/deuna.html">Servicio de Carrera</a>.   
+Esta aplicación móvil lleva el nombre de <B><n>fgs</n></B>
+<br>
+<n>{</n>
+<!-- VDLPYL-Servicio de Carrera {fgs-cliente-v1.apk} -->
+<a href="https://VDLPYL.github.io/VDLPYL-descarga/fgs-cliente-v1.apk">Descargar esta aplicación móvil</a>
+<n>}</n>
 <br><br><br>
 <h6>
     <!--Solo tienes que ser Persistente-->
